--- a/login.html
+++ b/login.html
@@ -38,7 +38,8 @@
             <input type="password" id="password" placeholder="Password" />
 
             <div id="button_container">
-              <button onclick="login()">Login</button>
+              <a href="https://www.youtube.com"
+                ><button onclick="login()" id="login">Login</button></a>
               <button onclick="register()">Register</button>
             </div>
           </div>
