--- a/login.html
+++ b/login.html
@@ -28,7 +28,7 @@
     <div id="content_container">
       <div id="form_container">
         <div id="form_header_container">
-          <h2 id="form_header">Login + Firebase Database</h2>
+          <h2 id="form_header">Login</h2>
         </div>
 
         <div id="form_content_container">
@@ -38,8 +38,7 @@
             <input type="password" id="password" placeholder="Password" />
 
             <div id="button_container">
-              <a href="https://www.youtube.com"
-                ><button onclick="login()" id="login">Login</button></a>
+              <a href="https://www.youtube.com"><button onclick="login()">Login</button></a>
               <button onclick="register()">Register</button>
             </div>
           </div>
