--- a/index.html
+++ b/index.html
@@ -2451,7 +2451,7 @@
 
           <div class="cta-container">
 
-            <img src="./Images/discount.png" alt="summer collection" class="cta-banner"
+            <img src="./Img/discount.png" alt="summer collection" class="cta-banner"
               width=480px height=480px>
 
 
