--- a/index.html
+++ b/index.html
@@ -441,7 +441,7 @@
           </li>
 
           <li class="menu-category">
-            <a href="#" class="menu-title">FAQ</a>
+            <a href="faq.html" class="menu-title">FAQ</a>
           </li>
 
           <li class="menu-category">
