--- a/login.html
+++ b/login.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>Login + Firebase Database</title>
+    <title>Login Now</title>
     <!-- Cool Google Fonts -->
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
