--- a/product.html
+++ b/product.html
@@ -55,7 +55,7 @@
                 <div class="footer">
                   <button type="button">
                     <img src="http://co0kie.github.io/codepen/nike-product-page/cart.png" alt="">
-                    <span>add to cart</span>
+                      <span><a href="paynow.html">buy now</a></span>
                   </button>
                    <a href="#!"><img src="http://co0kie.github.io/codepen/nike-product-page/share.png" alt=""></a>
                 </div>
