--- a/paynow.html
+++ b/paynow.html
@@ -4,7 +4,7 @@
         <link rel="stylesheet" href="paynow.css">
     </head>
     <body>
-        <a href="#">
+        <a href="gateway.html">
             <span></span>
             <span></span>
             <span></span>
