--- a/index.html
+++ b/index.html
@@ -373,19 +373,19 @@
             <ul class="dropdown-list">
 
               <li class="dropdown-item">
-                <a href="#">Wearables for Him</a>
+                <a href="#">Wearables </a>
               </li>
 
               <li class="dropdown-item">
-                <a href="#">Illustrations for Him</a>
+                <a href="#">Illustrations</a>
               </li>
 
               <li class="dropdown-item">
-                <a href="#">Greeting Cards for Him</a>
+                <a href="#">Greeting Cards </a>
               </li>
 
               <li class="dropdown-item">
-                <a href="#">Accessories and Other</a>
+                <a href="#">Accessories </a>
               </li>
 
             </ul>
@@ -397,19 +397,19 @@
             <ul class="dropdown-list">
 
               <li class="dropdown-item">
-                <a href="#">Wearables for Her</a>
+                <a href="#">Wearables </a>
               </li>
 
               <li class="dropdown-item">
-                <a href="#">Illustrations for Her</a>
+                <a href="#">Illustrations </a>
               </li>
 
               <li class="dropdown-item">
-                <a href="#">Greeting Cards for Her</a>
+                <a href="#">Greeting Cards </a>
               </li>
 
               <li class="dropdown-item">
-                <a href="#">Accessories and Other</a>
+                <a href="#">Accessories </a>
               </li>
 
             </ul>
