--- a/login.html
+++ b/login.html
@@ -38,7 +38,7 @@
             <input type="password" id="password" placeholder="Password" />
 
             <div id="button_container">
-              <a href="index.html"><button onclick="login()">Login</button></a>
+              <button onclick="login()">Login</button>
               <button onclick="register()">Register</button>
             </div>
           </div>
