--- a/paynow.html
+++ b/paynow.html
@@ -11,7 +11,7 @@
             <span></span>
             Payment gateway
         </a>
-        <a href="#">
+        <a href="solana.html">
             <span></span>
             <span></span>
             <span></span>
