--- a/index.html
+++ b/index.html
@@ -760,7 +760,7 @@
             <img src="./Img/b1.png" alt="Polaroid Sale" class="banner-img">
 
             <div class="banner-content">
-              <a href="index.html" class="banner-btn">Shop now </a>
+              <a href="login.html" class="banner-btn">Shop now </a>
               <!change shop now button position here>
             </div>
 
